--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,7 +77,8 @@ extra:
   guide:
     Name: "IBM Cloud Security and Compliance Center - Level 3 Demonstration Guide"
     URL: "https://ibm.github.io/SalesEnablement-SCC-L3/"
-  itz:
+    createVSIscript: "https://raw.githubusercontent.com/IBM/SalesEnablement-SCC-L3/main/tools/createVSI.bash"
+      itz:
     CloudAccount: "2305900 - ITZ - ADHOC03"
     CollectionURL: "xyz"
     EnvironmentURL: "xyz"
