more initial draft of config section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "arjones",
         "eventnotifications",
+        "ipspoofing",
         "Iscript",
         "Lurl"
     ]
