--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,7 @@ nav:
     - 'Access the environment': 'env/Access the environment.md'
     - 'Configure remediation scenario': 'env/Configure the environment.md'
     - 'Configure SMS messaging (OPTIONAL)': 'env/ConfigureSMS.md'
-  - 'Client Demonstration':
+  - 'Client Demonstrations':
     - 'Overview': 'demo/Overview.md'
     - 'High-level demonstration of SCC': 'demo/scc.md'
     - 'Remediating a failed compliance control': 'demo/remediation.md'
