update L2 URL in YL

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,7 +74,7 @@ extra:
     BPurlTechSales: "https://learn.ibm.com/course"
   level2learningplan:
     Name: "IBM Cloud Security and Compliance Center Foundation"
-    YLurl: "https://yourlearning.ibm.com/activity/PLAN-???"
+    YLurl: "https://yourlearning.ibm.com/activity/PLAN-7D82EAEDC78C"
     BPurl: "https://learn.ibm.com/course"
   offering:
     Name: "IBM Cloud Security and Compliance Center (SCC)"
