--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
     "cSpell.words": [
         "arjones",
+        "CIEM",
         "eventnotifications",
+        "helloworld",
         "ipspoofing",
         "Iscript",
-        "Lurl"
+        "Lurl",
+        "robotshop",
+        "Sysdig"
     ]
 }
