--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,7 +26,7 @@ nav:
     - 'Provisioning an SCC instance (OPTIONAL)': 'demo/provisioning.md'
     - 'High-level demonstration of SCC': 'demo/scc.md'
     - 'Remediating a failed compliance control': 'demo/remediation.md'
-    - 'High-level demonstration of Workload Protection - NOT READY': 'demo/wp.md'
+    - 'High-level demonstration of Workload Protection': 'demo/wp.md'
   - 'Next Steps': 'NextSteps.md'
 
 theme:
