--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,7 @@
         "Lurl",
         "robotshop",
         "Sysdig"
-    ]
+    ],
+    "ansible.lightspeed.enabled": true,
+    "ansible.lightspeed.suggestions.enabled": true
 }
