--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -76,7 +76,7 @@ extra:
   level2learningplan:
     Name: "IBM Cloud Security and Compliance Center Foundation"
     YLurl: "https://yourlearning.ibm.com/activity/PLAN-7D82EAEDC78C"
-    BPurl: "https://learn.ibm.com/course"
+    BPurl: "https://learn.ibm.com/course/view.php?id=13363"
   offering:
     Name: "IBM Cloud Security and Compliance Center (SCC)"
   guide:
